Game cover loading routines improved, supports more databases for cover download, show progress while downloading game cover

--- a/resources/ui/coverviewdialog.ui
+++ b/resources/ui/coverviewdialog.ui
@@ -41,6 +41,9 @@
         <property name="text">
          <string/>
         </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
        </widget>
       </item>
       <item row="0" column="1">
