--- a/resources/ui/wiibafudialog.ui
+++ b/resources/ui/wiibafudialog.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>442</width>
-    <height>211</height>
+    <width>450</width>
+    <height>241</height>
    </rect>
   </property>
   <property name="windowIcon">
@@ -87,7 +87,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
+      <item row="3" column="0">
        <widget class="QLabel" name="label_ImageFormat">
         <property name="locale">
          <locale language="English" country="UnitedStates"/>
@@ -97,7 +97,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="3" column="1">
        <widget class="QComboBox" name="comboBox_ImageFormat">
         <property name="locale">
          <locale language="English" country="UnitedStates"/>
@@ -129,7 +129,7 @@
         </item>
        </widget>
       </item>
-      <item row="2" column="2">
+      <item row="3" column="2">
        <widget class="QComboBox" name="comboBox_compressionDefaults">
         <property name="enabled">
          <bool>false</bool>
@@ -159,6 +159,37 @@
           <string>Other</string>
          </property>
         </item>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLineEdit" name="lineEdit_SplitSize">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="toolTip">
+         <string>Split size and optional unit factor 'kmgtpe' (base=1000] or 'KMGTPE' (base=1024)
+Default value is 4G</string>
+        </property>
+        <property name="text">
+         <string>4G</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_SplitSize">
+        <property name="text">
+         <string>Split size:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2">
+       <widget class="QPushButton" name="pushButton_Split">
+        <property name="text">
+         <string>Split</string>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
      </layout>
