Path to wit adapted for windows, proxy checkbox text fixed

--- a/resources/ui/settings.ui
+++ b/resources/ui/settings.ui
@@ -83,7 +83,7 @@
           <item>
            <widget class="QCheckBox" name="main_checkBox_useProxy">
             <property name="text">
-             <string>Use proxy for cover download</string>
+             <string>Use proxy for cover and titles download</string>
             </property>
            </widget>
           </item>
