--- a/resources/ui/wiibafu.ui
+++ b/resources/ui/wiibafu.ui
@@ -1130,11 +1130,11 @@
        <layout class="QVBoxLayout" name="verticalLayout_4">
         <item>
          <widget class="QPlainTextEdit" name="logTab_plainTextEdit_Log">
+          <property name="undoRedoEnabled">
+           <bool>false</bool>
+          </property>
           <property name="readOnly">
            <bool>true</bool>
-          </property>
-          <property name="textInteractionFlags">
-           <set>Qt::TextSelectableByMouse</set>
           </property>
          </widget>
         </item>
